# ManagedAutoModel

./: Dockerfile  README.md  pyproject.toml
.github/workflows/: start.yaml
assets/: automodel.md  design.md
automodel/: __init__.py
automodel/client/: abstract.py  catboost.py  local_configs.py  transport.py
automodel/client/models/: __init__.py  base.py  catboost.py
automodel/server/: __init__.py  app.py  manager.py  storage_configs.py
automodel/server/db/: manager.py  models.py
doc/: db.md  design.md
test/: decorator.py  docker-compose.yaml  s3_config.yaml  test_fastapi.py
test/integration/app_design/: docker.py
test/unit_test/: train_model.py
