[tool.poetry]
name = "automodel-design"
version = "0.1.0"
description = ""
authors = ["Nikita"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
catboost = "^1.2.3"
scikit-learn = "^1.4.1.post1"
s3fs = "^2024.3.0"
python-multipart = "^0.0.9"
pydantic = "^2.6.4"
requests = "^2.31.0"
fastapi = "^0.110.0"
sqlalchemy = "^2.0.28"


[tool.poetry.group.test.dependencies]
pytest = "^8.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
